deployments/k8s/api_backend/network/destination-rule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: api-guess-backend
spec:
  host: api-guess-backend
  subsets:
  - name: v1
    labels:
      version: v1
#  - name: v2
#    labels:
#      version: v2
#  - name: v3
#    labels:
#      version: v3
